Bug 99984 - inferred row rendered wrong for some empty elements
Summary: inferred row rendered wrong for some empty elements
Status: VERIFIED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: Formula Editor (show other bugs)
Version:
(earliest affected)
5.2.0.0.alpha0+
Hardware: x86 (IA32) Windows (All)
: medium normal
Assignee: Not Assigned
URL: https://www.w3.org/TR/MathML2/chapter...
Whiteboard: target:5.2.0
Keywords:
Depends on:
Blocks: 79695
  Show dependency treegraph
 
Reported: 2016-05-21 19:11 UTC by Regina Henschel
Modified: 2016-10-25 19:02 UTC (History)
2 users (show)

See Also:
Crash report or crash signature:


Attachments
testfiles to see wrong rendering (2.47 KB, application/x-zip-compressed)
2016-05-21 19:11 UTC, Regina Henschel
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Regina Henschel 2016-05-21 19:11:19 UTC
Created attachment 125216 [details]
testfiles to see wrong rendering

Some MathML-elements require exactly one argument, but with the special rule, that in case they have no argument, they are treated as if they have an empty mrow element as content.

Such cases are rendered wrong for the elements: mphantom, msqrt, mstyle and mtd.
The case mtd is severe, because empty table cells often occur, in case the mtable element is used to arrange things.

I propose to import the empty case of inferred mrow as empty group {}.

The files xyz_missing.mml and xyz_exists.mml of the attached test files should render the same.

Please make sure you use a current build from master, otherwise the files mstyle_empty_mrow_missing.mml and msqrt_empty_mrow_missing.mml will crash.
Comment 1 Commit Notification 2016-05-23 06:29:52 UTC
Regina Henschel committed a patch related to this issue.
It has been pushed to "master":

http://cgit.freedesktop.org/libreoffice/core/commit/?id=66a953bf3aa6cb1abd55380d846accd68981537a

tdf#99984 render inferred mrow as group {}

It will be available in 5.2.0.

The patch should be included in the daily builds available at
http://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
http://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 2 raal 2016-05-31 15:41:43 UTC
Version: 5.3.0.0.alpha0+
Build ID: 86d84ae4bba0d4c45bc13232645318291a8aed75
CPU Threads: 4; OS Version: Linux 4.4; UI Render: default; 
TinderBox: Linux-rpm_deb-x86_64@70-TDF, Branch:master, Time: 2016-05-26_14:33:24