tdf#99984 render inferred mrow as group {}

In case an element has no content, but has got an SmXMLRowContext,
an empty group {} is inserted. The result is, that empty table
cells are rendered without error, so that files, which use a
mtable element to arrange things, no longer break on import.

Change-Id: Iae158226e6478f2f9f397b8485044860ee8767c2
Reviewed-on: https://gerrit.libreoffice.org/25273
Tested-by: Jenkins <ci@libreoffice.org>
Reviewed-by: jan iversen <jani@documentfoundation.org>